# patla_counter

./: .gitignore  .todo  Cargo.toml  Procfile
frontend/: auth.html  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Auth.vue  Counter.vue  SideBar.vue
migrations/2020-01-10-183524_create_table/: down.sql  up.sql
migrations/2020-01-10-213240_create_passwords/: down.sql  up.sql
migrations/2020-01-10-221214_change_password_hash_type/: up.sql
migrations/2020-01-14-094352_multiple_lists/: down.sql  up.sql
src/: cli.rs  db.rs  forms.rs  main.rs  models.rs  schema.rs
