[package]
name = "patla_counter"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
diesel = { version = "1.4.3", features = ["postgres", "chrono", "r2d2"] }
actix = "0.9.0"
chrono = { version = "0.4.10", features = ["serde"] }
serde = { version = "1.0.44", features = ["derive"] }
serde_json = "1.0.44"
dotenv = "0.15.0"
actix-files = "0.2.1"
actix-identity = "0.2.1"
rand = "0.7.2"
sha2 = "0.8.1"
hex = "0.4.0"
actix-cors = "0.2.0"
